# txt2manwrap

./: .travis.yml  ChangeLog  Makefile.am  NEWS  README  configure.ac
.github/workflows/: build-test.yml
lxcu/fedora/: install.list
lxcu/ubuntu/: install.list
source/man/man1/: Makefile.am  cnv2man  txt2manwrap.1.man.in  txt2manwrap.1.txt
source/progs/bash/: Makefile.am  txt2manwrap.in  txt2manwrap.sh.in
source/scripts/: Makefile.am  txt2manwrap.in
src/man/1/: Makefile.am  txt2manwrap.1.man.in
src/prg/bash/: Makefile.am  txt2manwrap.sh.in
src/prg/test/: Makefile.am  Test01Answer.txt.in  test-menu.sh.in  test01.sh.in  test01verbose.sh.in  wutconv.1.man.in
