#! /usr/bin/env bash
##########################################################################
##									##
## Script ID: ./Makefile.am						##
## Author: Mark Grant							##
##									##
## Purpose:								##
## Automake script file to generate txt2manwrap project from source.	##
##									##
##########################################################################

##########################################################################
##									##
## Changelog								##
##									##
## Date		Author	Version	Description				##
##									##
## 19/09/2015	MG	1.0.1	First release.				##
##									##
##########################################################################


SUBDIRS = source/man/man1 source/scripts

